force-app/main/default/objects/Contact/fields/CustomerPortalUsers__c.field-meta.xml
<CustomField>
    <fullName>CustomerPortalUsers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Portal Users</label>
    <referenceTo>CustomerPortalUsers__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>