force-app/main/default/objects/Contact/fields/DaysInactive__c.field-meta.xml
<CustomField>
    <fullName>DaysInactive__c</fullName>
    <formula>IF(
 NOT ISBLANK(UserLastLogin__c),
 TODAY() - UserLastLogin__c,
 TODAY() - UserCreatedDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Inactive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>