force-app/main/default/objects/Contact/fields/Email_Is_Suspicious__c.field-meta.xml
<CustomField>
    <fullName>Email_Is_Suspicious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email_Is_Suspicious</label>
    <type>Checkbox</type>
</CustomField>