force-app/main/default/objects/Contact/fields/EmailsAllocation__c.field-meta.xml
<CustomField>
    <fullName>EmailsAllocation__c</fullName>
    <label>Emails Allocation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send CMR</fullName>
            </value>
            <value>
                <fullName>Send Invoice PDF</fullName>
            </value>
            <value>
                <fullName>Send MTC</fullName>
            </value>
            <value>
                <fullName>Send Packing list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>