force-app/main/default/objects/Contact/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <description>ID code of the related user in the ERP system (used for integration purposes)</description>
    <externalId>true</externalId>
    <inlineHelpText>ID code of the related user in the ERP system (used for integration purposes)</inlineHelpText>
    <label>ID in ERP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>