force-app/main/default/objects/Contact/fields/Is_Steel_Segment__c.field-meta.xml
<CustomField>
    <fullName>Is_Steel_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Steel Segment</label>
    <type>Checkbox</type>
</CustomField>