force-app/main/default/objects/Contact/fields/Mobile_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile_Is_Invalid</label>
    <type>Checkbox</type>
</CustomField>