force-app/main/default/objects/Contact/fields/Phone_Is_Suspicious__c.field-meta.xml
<CustomField>
    <fullName>Phone_Is_Suspicious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone_Is_Suspicious</label>
    <type>Checkbox</type>
</CustomField>