force-app/main/default/objects/Contact/fields/PortalUser__c.field-meta.xml
<CustomField>
    <fullName>PortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>PortalUser__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>