force-app/main/default/objects/Contact/fields/TrackDriver__c.field-meta.xml
<CustomField>
    <fullName>TrackDriver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TrackDriver</label>
    <type>Checkbox</type>
</CustomField>