force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT-Admin</fullName>
            </value>
            <value>
                <fullName>OrdersAdmin</fullName>
                <label>Orders Admin</label>
            </value>
            <value>
                <fullName>Integration Primary Admin</fullName>
            </value>
            <value>
                <fullName>Helpdesk Admin</fullName>
            </value>
            <value>
                <fullName>BO Specialist</fullName>
            </value>
            <value>
                <fullName>BO Manager</fullName>
            </value>
            <value>
                <fullName>Sales Officer</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>App Admin</fullName>
            </value>
            <value>
                <fullName>SF Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>