force-app/main/default/objects/Contact/fields/UserCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>UserCreatedDate__c</fullName>
    <label>User Created Date</label>
    <type>Date</type>
</CustomField>