force-app/main/default/objects/Contact/fields/UserLastLogin__c.field-meta.xml
<CustomField>
    <fullName>UserLastLogin__c</fullName>
    <label>User Last Login</label>
    <type>Date</type>
</CustomField>