force-app/main/default/objects/Contact/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>Any person outside our company (customer, partner, rival, etc.)</description>
    <label>External</label>
</RecordType>