force-app/main/default/objects/Contact/recordTypes/Lead_Contact.recordType-meta.xml
<RecordType>
    <fullName>Lead_Contact</fullName>
    <active>true</active>
    <label>Lead Contact</label>
</RecordType>