force-app/main/default/objects/Contact/validationRules/Require_Mailing_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Mailing_Address</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISBLANK(MailingCountry)
)</errorConditionFormula>
    <errorMessage>You must specify the value in the &quot;Mailing Country&quot; field</errorMessage>
</ValidationRule>