force-app/main/default/objects/Contact/listViews/All_Contacts_for_Questionary.listView-meta.xml
<ListView>
    <fullName>All_Contacts_for_Questionary</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.MarketSegment__c</columns>
    <columns>IsPortalUser__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Primary_Respondent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Contacts (for Questionary)</label>
    <sharedTo>
        <group>Marketing</group>
    </sharedTo>
</ListView>