force-app/main/default/objects/Contact/listViews/All_Contacts_Machinery.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Machinery</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.MarketSegment__c</field>
        <operation>equals</operation>
        <value>00016</value>
    </filters>
    <label>All Contacts (Machinery)</label>
    <sharedTo>
        <role>CSO_CU</role>
    </sharedTo>
</ListView>