force-app/main/default/objects/Contact/listViews/Portal_Users.listView-meta.xml
<ListView>
    <fullName>Portal_Users</fullName>
    <columns>Account.MarketSegment__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <columns>Account.ID_ERP__c</columns>
    <columns>Account.CustomerPortalEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsPortalUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>ТЕСТ</value>
    </filters>
    <label>Portal Users ALL</label>
    <sharedTo>
        <group>ADMIN</group>
        <group>SeniorManagementTeam</group>
    </sharedTo>
</ListView>