force-app/main/default/objects/Contact/listViews/Portal_Users_AMERICA.listView-meta.xml
<ListView>
    <fullName>Portal_Users_AMERICA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsPortalUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.MarketSegment__c</field>
        <operation>equals</operation>
        <value>00001</value>
    </filters>
    <label>Portal Users AMERICA</label>
    <sharedTo>
        <group>AMERICA</group>
        <group>Marketing</group>
    </sharedTo>
</ListView>